# apng-drawable

./: .editorconfig  .gitignore  CONTRIBUTING.md  Dangerfile  Gemfile  NOTICE  README.md  build.gradle.kts  dependencies.gradle.kts  download_libpng_and_apply_apng_patch.sh  gradle.properties  gradlew.bat  settings.gradle.kts
.circleci/: config.yml
.github/workflows/: ossrh.yml  pull-request.yml
apng-drawable/: .gitignore  build.gradle.kts  proguard-rules.pro
apng-drawable/src/main/: AndroidManifest.xml
apng-drawable/src/main/cpp/: CMakeLists.txt
apng-drawable/src/main/cpp/apng-drawable/: ApngDecoder.cpp  ApngDecoder.h  ApngFrame.cpp  ApngFrame.h  ApngImage.cpp  Error.h  StreamSource.h
apng-drawable/src/main/cpp/apng-drawbale/: ApngDecoder.cpp  ApngDecoderJni.cpp  ApngFrame.cpp  ApngFrame.h  ApngImage.cpp  ApngImage.h  Log.h  StreamSource.cpp
apng-drawable/src/main/kotlin/com/linecorp/apng/: ApngDrawable.kt  RepeatAnimationCallback.kt
apng-drawable/src/main/kotlin/com/linecorp/apng/decoder/: Apng.kt  ApngDecoderJni.kt  ApngException.kt
apng-drawable/src/test/kotlin/com/linecorp/apng/: ApngDrawableTest.kt
apng-drawable/src/test/kotlin/com/linecorp/apng/utils/: AssertUtils.kt
buildSrc/src/main/kotlin/: Consts.kt  Dependencies.kt  Extensions.kt  ModuleConfig.kt
gradle/: libs.versions.toml
sample-app/: build.gradle.kts
sample-app/src/main/: AndroidManifest.xml
sample-app/src/main/kotlin/com/linecorp/apngsample/: MainActivity.kt
sample-app/src/main/res/layout/: activity_main.xml
sample-app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
sample-app/src/main/res/values/: strings.xml
